fix: fixed the issue of digit contract tick count value getting truncated in responsive view

--- a/packages/trader/src/sass/app/modules/contract/digits.scss
+++ b/packages/trader/src/sass/app/modules/contract/digits.scss
@@ -235,7 +235,7 @@
                 top: 1.6rem;
                 left: 0;
                 right: 0;
-                margin-top: 4.8rem;
+                margin-top: 6rem;
                 pointer-events: none;
 
                 &-value,
